--- a/demos/index.html
+++ b/demos/index.html
@@ -1,23 +1,18 @@
-
 <!DOCTYPE html>
 <html>
  <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="data assimilation, Kalman Filter, demo, JavaScript, web-app, education">
+    <meta name="keywords" content="visualization, demo, JavaScript, web-app, education">
     <meta name="author" content="Alexander Barth">
-
     <title>matplot: demo</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
  </head>
-
-    <h1>matplot: pcolor</h1>
-
+    <h1>matplot</h1>
     <ul>
-      <li><a href="demo_plot.html">plot</a></li>
-      <li><a href="demo_peaks.html">peaks</a></li>
-      <li><a href="demo_pcolor.html">pcolor</a></li>
-      <li><a href="demo_surf.html">surf</a></li>
-    </ul>
-
-      
+      <li><a href="demo_plot.html">1D line, plot</a></li>
+      <li><a href="demo_peaks.html">2D plot</a></li>
+      <li><a href="demo_pcolor.html">2D plot on non-rectangular grid</a></li>
+      <li><a href="demo_surf.html">3D surface (experimental)</a></li>
+    </ul>      
   </body>
 </html>
