--- a/demos/demo_plot.html
+++ b/demos/demo_plot.html
@@ -5,8 +5,9 @@
     <meta name="keywords" content="data assimilation, Kalman Filter, demo, JavaScript, web-app, education">
     <meta name="author" content="Alexander Barth">
 
-    <title>matplot: pcolor</title>
+    <title>matplot: plot</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="matplot.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="numeric-1.2.3.js"></script>
     <script type="text/javascript" src="matplot.js"></script>
     <script type="text/javascript">
