--- a/demos/demo_pcolor.html
+++ b/demos/demo_pcolor.html
@@ -7,32 +7,36 @@
 
     <title>matplot: pcolor</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="matplot.css" rel="stylesheet" type="text/css" />
+
     <script type="text/javascript" src="numeric-1.2.3.js"></script>
     <script type="text/javascript" src="matplot.js"></script>
     <script type="text/javascript">
       function init() {
-    var i,j,x=[],y=[],z=[];
+    var i,j,x=[],y=[],z=[], r, theta;
     var f = function(x,y) { 
         return 3*(1-x)*(1-x)*Math.exp(-x*x - (y+1)*(y+1))
             - 10*(x/5 - x*x*x - Math.pow(y,5))*Math.exp(-x*x-y*y) 
             - 1/3*Math.exp(-(x+1)*(x+1) - y*y); }
 
-    for (i=0; i < 49; i++) {
+    for (i=0; i < 100; i++) {
         x[i] = [];
         y[i] = [];
         z[i] = [];
 
-        for (j=0; j < 49; j++) {
-            x[i][j] = -3 + i/8;
-            y[i][j] = -3 + j/8;
-            z[i][j] = f(x[i][j],y[i][j]);
-            y[i][j] = -3 + j/8 + x[i][j];
+        for (j=0; j < 100; j++) {
+            r = 20 + i;
+            theta = 2*Math.PI * j/99;
+            x[i][j] = r*Math.cos(theta);
+            y[i][j] = r*Math.sin(theta);
+            z[i][j] = Math.cos(2*theta);
         }
     }
         fig = new matplot.Figure("plot",700,500);
         ax = fig.axes(0.1,0.1,.72,.8);
         ax.pcolor(x,y,z);
         ax.colorbar();
+        ax.DataAspectRatio([1,1,1]);
         fig.draw();
 }
 
