--- a/demos/demo_peaks.html
+++ b/demos/demo_peaks.html
@@ -7,6 +7,8 @@
 
     <title>matplot: pcolor</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="matplot.css" rel="stylesheet" type="text/css" />
+
     <script type="text/javascript" src="numeric-1.2.3.js"></script>
     <script type="text/javascript" src="matplot.js"></script>
     <script type="text/javascript">
