--- a/demos/demo_peaks.html
+++ b/demos/demo_peaks.html
@@ -11,6 +11,7 @@
 
     <script type="text/javascript" src="numeric-1.2.3.js"></script>
     <script type="text/javascript" src="matplot.js"></script>
+    <script type="text/javascript" src="matplot-demo.js"></script>
     <script type="text/javascript">
       function init() {
       
