--- a/demos/demo_peaks.html
+++ b/demos/demo_peaks.html
@@ -1,42 +1,70 @@
+
 <!DOCTYPE html>
 <html>
  <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="data assimilation, Kalman Filter, demo, JavaScript, web-app, education">
-    <meta name="author" content="Alexander Barth">
+   <meta name="author" content="Alexander Barth">
 
-    <title>matplot: pcolor</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="matplot.css" rel="stylesheet" type="text/css" />
+   <title>matplot: pcolor</title>
+   <link href="style.css" rel="stylesheet" type="text/css" />
+   <link href="prettify/prettify.css" type="text/css" rel="stylesheet" />
+   <script type="text/javascript" src="prettify/prettify.js"></script>
+   <script type="text/javascript" src="numeric-1.2.3.js"></script>
+   <link href="matplot.css" rel="stylesheet" type="text/css" />
+   <script type="text/javascript" src="matplot.js"></script>
 
-    <script type="text/javascript" src="numeric-1.2.3.js"></script>
-    <script type="text/javascript" src="matplot.js"></script>
-    <script type="text/javascript" src="matplot-demo.js"></script>
-    <script type="text/javascript">
-      function init() {
-      
-        peaks = matplot.peaks();
-        fig = new matplot.Figure("plot",700,500);
-        ax = fig.axes(0.1,0.1,.72,.8);
-        ax.pcolor(peaks.x,peaks.y,peaks.z);
-        ax.colorbar();
-        fig.draw();
+   <script type="text/javascript">
+function init() {      
+  
+// load the peaks sample data
+peaks = matplot.peaks();
 
-     console.log('fig.cLim() ',ax.cLim());
-     ax.cLim([-20,20]);
-     console.log('fig.cLim() ',ax.cLim());
-     ax.cLimMode('auto');
-     console.log('fig.cLim() ',ax.cLim());
-     //ax.cLimMode('garbage');
+// make a figure of size 700 x 500 pixels
+fig = new matplot.Figure("plot",700,500);
+
+// add axis to the figure
+ax = fig.axes(0.1,0.1,.72,.8);
+
+// pseudo color plot
+ax.pcolor(peaks.x,peaks.y,peaks.z);
+
+// add color-bar
+ax.colorbar();
+
+// draw everything
+fig.draw();
+
 }
 
-      
+addEventListener('load', function (event) { prettyPrint() }, false);
+
     </script>
  </head>
     <body onload="init()">
     <h1>matplot: pcolor</h1>
+    <p>2D pseudo color plot</p>
+    <div id="plot"></div>
+    <h2>Code:</h2>
+    <pre class=prettyprint>
 
-    <div id="plot">
-    </div>
+// load the peaks sample data
+peaks = matplot.peaks();
+
+// make a figure of size 700 x 500 pixels
+fig = new matplot.Figure("plot",700,500);
+
+// add axis to the figure
+ax = fig.axes(0.1,0.1,.72,.8);
+
+// pseudo color plot
+ax.pcolor(peaks.x,peaks.y,peaks.z);
+
+// add color-bar
+ax.colorbar();
+
+// draw everything
+fig.draw();
+
+    </pre>    
   </body>
 </html>
