--- a/demos/demo_plot.html
+++ b/demos/demo_plot.html
@@ -1,27 +1,22 @@
+
 <!DOCTYPE html>
 <html>
  <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="data assimilation, Kalman Filter, demo, JavaScript, web-app, education">
-    <meta name="author" content="Alexander Barth">
+   <meta name="author" content="Alexander Barth">
 
-    <title>matplot: plot</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+   <title>matplot: Plot</title>
+   <link href="style.css" rel="stylesheet" type="text/css" />
+   <link href="prettify/prettify.css" type="text/css" rel="stylesheet" />
+   <script type="text/javascript" src="prettify/prettify.js"></script>
+   <script type="text/javascript" src="numeric-1.2.3.js"></script>
+   <link href="matplot.css" rel="stylesheet" type="text/css" />
+   <script type="text/javascript" src="matplot.js"></script>
 
-    <link href="prettify/prettify.css" type="text/css" rel="stylesheet" />
-    <script type="text/javascript" src="prettify/prettify.js"></script>
-
-    <script type="text/javascript" src="numeric-1.2.3.js"></script>
-
-    <link href="matplot.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="matplot.js"></script>
-
-    <script type="text/javascript">
- function init() {      
-
+   <script type="text/javascript">
+function init() {      
+  
  var i,x=[],y=[],z=[];
-
- prettyPrint();
 
  for (i=0; i < 49; i++) {
    x[i] = i+3;
@@ -29,6 +24,7 @@
    z[i] = Math.sin((i+3)/5);
  }
  
+// make a figure of size 700 x 500 pixels
 fig = new matplot.Figure("plot",700,500);
 ax = fig.axes(0.1,0.1,.72,.8);
 
@@ -50,20 +46,21 @@ ax.annotation(20,0.6,0,'annotation');
 
 // draw everything
 fig.draw();
+
 }
 
-      
+addEventListener('load', function (event) { prettyPrint() }, false);
+
     </script>
  </head>
     <body onload="init()">
-    <h1>matplot: plot</h1>
-    <div id="plot">
-    </div>
+    <h1>matplot: Plot</h1>
+    <p>Simple 1D line plots with different markers, anotation and legend</p>
+    <div id="plot"></div>
+    <h2>Code:</h2>
+    <pre class=prettyprint>
 
-<pre class=prettyprint>
  var i,x=[],y=[],z=[];
-
- prettyPrint();
 
  for (i=0; i < 49; i++) {
    x[i] = i+3;
@@ -71,6 +68,7 @@ fig.draw();
    z[i] = Math.sin((i+3)/5);
  }
  
+// make a figure of size 700 x 500 pixels
 fig = new matplot.Figure("plot",700,500);
 ax = fig.axes(0.1,0.1,.72,.8);
 
@@ -92,7 +90,7 @@ ax.annotation(20,0.6,0,'annotation');
 
 // draw everything
 fig.draw();
-</pre>
-    
+
+    </pre>    
   </body>
 </html>
