--- a/demos/demo_surf.html
+++ b/demos/demo_surf.html
@@ -1,67 +1,74 @@
+
 <!DOCTYPE html>
 <html>
  <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="data assimilation, Kalman Filter, demo, JavaScript, web-app, education">
-    <meta name="author" content="Alexander Barth">
+   <meta name="author" content="Alexander Barth">
 
-    <title>matplot: pcolor</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="matplot.css" rel="stylesheet" type="text/css" />
+   <title>matplot: surface plot</title>
+   <link href="style.css" rel="stylesheet" type="text/css" />
+   <link href="prettify/prettify.css" type="text/css" rel="stylesheet" />
+   <script type="text/javascript" src="prettify/prettify.js"></script>
+   <script type="text/javascript" src="numeric-1.2.3.js"></script>
+   <link href="matplot.css" rel="stylesheet" type="text/css" />
+   <script type="text/javascript" src="matplot.js"></script>
 
-    <script type="text/javascript" src="numeric-1.2.3.js"></script>
-    <script type="text/javascript" src="matplot.js"></script>
-    <script type="text/javascript">
-      function init() {
-    var i,j,x=[],y=[],z=[];
-    var f = function(x,y) { 
-        return 3*(1-x)*(1-x)*Math.exp(-x*x - (y+1)*(y+1))
-            - 10*(x/5 - x*x*x - Math.pow(y,5))*Math.exp(-x*x-y*y) 
-            - 1/3*Math.exp(-(x+1)*(x+1) - y*y); }
+   <script type="text/javascript">
+function init() {      
+  
+// load the peaks sample data
+peaks = matplot.peaks();
 
-    for (i=0; i < 49; i++) {
-        x[i] = [];
-        y[i] = [];
-        z[i] = [];
+// make a figure of size 700 x 500 pixels
+fig = new matplot.Figure("plot",700,500);
 
-        for (j=0; j < 49; j++) {
-            x[i][j] = -3 + i/8;
-            y[i][j] = -3 + j/8;
-            z[i][j] = f(x[i][j],y[i][j]);
-        }
-    }
-        fig = new matplot.Figure("plot",700,500);
-        ax = fig.axes(0.1,0.1,.72,.8);
-        ax.surf(x,y,z);
-//        ax.zLim([-10,10]);
-//        ax.zLim([-3,3]);
-        ax.colorbar();
+// add axis to the figure
+ax = fig.axes(0.1,0.1,.72,.8);
 
-        //ax.DataAspectRatio([1,1,1]);
-        i = 0;
-        fun = function() {
-                      //ax.CameraPosition([-27.394*Math.cos(i),  -35.701*Math.sin(i),   25.981]);
-                      ax.CameraPosition([-27.394*Math.cos(i),  -35.701,   25.981*Math.sin(i)]);
-                      fig.draw();
-                      i = i+0.2;
-                      if (i < 7) {
-                         setTimeout(fun,1000);
-                              }
-                      }
+// pseudo color plot
+ax.surf(peaks.x,peaks.y,peaks.z);
 
-        //fun();
-                              ax.CameraPosition([27.394,  35.701,   25.981]);
-        //ax.CameraUpVector([0,1,0]);
-        fig.draw();
+ax.CameraPosition([27.394,  35.701,   25.981]);
+
+// add color-bar
+ax.colorbar();
+
+// draw everything
+fig.draw();
+
 }
 
-      
+addEventListener('load', function (event) { prettyPrint() }, false);
+
     </script>
  </head>
     <body onload="init()">
-    <h1>matplot: pcolor</h1>
+    <h1>matplot: surface plot</h1>
+    <p>3D pseudo color plot</p>
+    <div id="plot"></div>
+    <h2>Code:</h2>
+    <pre class=prettyprint>
 
-    <div id="plot">
-    </div>
+// load the peaks sample data
+peaks = matplot.peaks();
+
+// make a figure of size 700 x 500 pixels
+fig = new matplot.Figure("plot",700,500);
+
+// add axis to the figure
+ax = fig.axes(0.1,0.1,.72,.8);
+
+// pseudo color plot
+ax.surf(peaks.x,peaks.y,peaks.z);
+
+ax.CameraPosition([27.394,  35.701,   25.981]);
+
+// add color-bar
+ax.colorbar();
+
+// draw everything
+fig.draw();
+
+    </pre>    
   </body>
 </html>
