--- a/demos/demo_plot.html
+++ b/demos/demo_plot.html
@@ -26,7 +26,7 @@ function init() {
  
 // make a figure of size 700 x 500 pixels
 fig = new matplot.Figure("plot",700,500);
-ax = fig.axes(0.1,0.1,.72,.8);
+ax = fig.axes();
 
 // simple plot using indices as x-axis and values in parameter z as y-axis
 // The curve is draw with the given color. The label will be used later in the legend
