--- a/demos/demo_surf.html
+++ b/demos/demo_surf.html
@@ -28,7 +28,7 @@ ax = fig.axes(0.1,0.1,.72,.8);
 // pseudo color plot
 ax.surf(peaks.x,peaks.y,peaks.z);
 
-ax.CameraPosition([27.394,  35.701,   25.981]);
+//ax.CameraPosition([27.394,  35.701,   25.981]);
 
 // add color-bar
 ax.colorbar();
