--- a/demos/demo_surf.html
+++ b/demos/demo_surf.html
@@ -23,7 +23,7 @@ peaks = matplot.peaks();
 fig = new matplot.Figure("plot",700,500);
 
 // add axis to the figure
-ax = fig.axes(0.1,0.1,.72,.8);
+ax = fig.axes();
 
 // pseudo color plot
 ax.surf(peaks.x,peaks.y,peaks.z);
@@ -56,12 +56,12 @@ peaks = matplot.peaks();
 fig = new matplot.Figure("plot",700,500);
 
 // add axis to the figure
-ax = fig.axes(0.1,0.1,.72,.8);
+ax = fig.axes();
 
 // pseudo color plot
 ax.surf(peaks.x,peaks.y,peaks.z);
 
-ax.CameraPosition([27.394,  35.701,   25.981]);
+//ax.CameraPosition([27.394,  35.701,   25.981]);
 
 // add color-bar
 ax.colorbar();
