--- a/demos/demo_pcolor.html
+++ b/demos/demo_pcolor.html
@@ -10,7 +10,7 @@
    <link href="prettify/prettify.css" type="text/css" rel="stylesheet" />
    <script type="text/javascript" src="prettify/prettify.js"></script>
    <script type="text/javascript" src="numeric-1.2.3.js"></script>
-   <link href="matplot.css" rel="stylesheet" type="text/css" />
+   <link href="../matplot.css" rel="stylesheet" type="text/css" />
    <script type="text/javascript" src="matplot.js"></script>
 
    <script type="text/javascript">
