--- a/demos/index.html
+++ b/demos/index.html
@@ -12,6 +12,7 @@
       <li><a href="demo_plot.html">1D line, plot</a></li>
       <li><a href="demo_peaks.html">2D plot</a></li>
       <li><a href="demo_pcolor.html">2D plot on non-rectangular grid</a></li>
+      <li><a href="demo_patch.html">patch</a></li>
       <li><a href="demo_surf.html">3D surface (experimental)</a></li>
     </ul>      
   </body>
