--- a/demos/demo_countries.html
+++ b/demos/demo_countries.html
@@ -27,17 +27,11 @@ fig = new matplot.Figure("plot",700,500);
 // add axis to the figure
 ax = fig.axes();
 
-ax.transform([
-   function(x) { 
-     return [x[0]*Math.PI/180,
-            Math.log(Math.tan(Math.PI/4 + x[1]/2 * Math.PI/180)),
-            x[2],x[3]]; 
-   },
-   function(x) { 
-     return [x[0]*180/Math.PI,
-            360*Math.atan(Math.exp(x[1]))/Math.PI - 90,
-            x[2],x[3]]; 
-   }]);
+// use the Mercator projection
+// matplot.trans.mercator is a list with two elements
+// the first element is a function with the direct transform
+// and the second element is the inverse transform
+ax.transform(matplot.trans.mercator);
 
 // set range of longitude and latitude
 ax.xLim([-180,180]);
