--- a/demos/demo_countries.html
+++ b/demos/demo_countries.html
@@ -5,7 +5,7 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    <meta name="author" content="Alexander Barth">
 
-   <title>matplot: countries</title>
+   <title>matplot: coastline</title>
    <link href="style.css" rel="stylesheet" type="text/css" />
    <link href="prettify/prettify.css" type="text/css" rel="stylesheet" />
    <script type="text/javascript" src="prettify/prettify.js"></script>
@@ -46,8 +46,8 @@ addEventListener('load', function (event) { prettyPrint() }, false);
     </script>
  </head>
     <body onload="init()">
-    <h1>matplot: countries</h1>
-    <p>patch showing countries</p>
+    <h1>matplot: coastline</h1>
+    <p>Example showing the coastline (function patch)</p>
     <div id="plot"></div>
     <h2>Code:</h2>
     <pre class=prettyprint>
