--- a/demos/index.html
+++ b/demos/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
  <head>
@@ -9,11 +10,7 @@
  </head>
     <h1>matplot</h1>
     <ul>
-      <li><a href="demo_plot.html">1D line, plot</a></li>
-      <li><a href="demo_peaks.html">2D plot</a></li>
-      <li><a href="demo_pcolor.html">2D plot on non-rectangular grid</a></li>
-      <li><a href="demo_patch.html">patch</a></li>
-      <li><a href="demo_surf.html">3D surface (experimental)</a></li>
+<li>Simple 1D line plots with different markers, anotation and legend (function plot) <a href="demo_plot.html">svg</a>  <a href="demo_plot_canvas.html">canvas</a> </li><li>2D pseudo color plot (function pcolor) <a href="demo_peaks.html">svg</a>  <a href="demo_peaks_canvas.html">canvas</a> </li><li>Draw a polygone (function patch) <a href="demo_patch.html">svg</a>  <a href="demo_patch_canvas.html">canvas</a> </li><li>Example showing the coastline (function patch) <a href="demo_countries.html">svg</a>  <a href="demo_countries_canvas.html">canvas</a> </li><li>2D pseudo color plot on non-rectangular grid (function pcolor) <a href="demo_pcolor.html">svg</a>  <a href="demo_pcolor_canvas.html">canvas</a> </li><li>Arrow plot (function quiver) <a href="demo_quiver.html">svg</a>  <a href="demo_quiver_canvas.html">canvas</a> </li><li>2D scatter plot (function scatter) <a href="demo_scatter.html">svg</a>  <a href="demo_scatter_canvas.html">canvas</a> </li><li>3D pseudo color plot (function surf) <a href="demo_surf.html">svg</a>  <a href="demo_surf_canvas.html">canvas</a> </li><li>3D scatter plot (function scatter3) <a href="demo_scatter3.html">svg</a>  <a href="demo_scatter3_canvas.html">canvas</a> </li>
     </ul>      
   </body>
 </html>
