--- a/demos/demo_pcolor.html
+++ b/demos/demo_pcolor.html
@@ -50,7 +50,7 @@ addEventListener('load', function (event) { prettyPrint() }, false);
  </head>
     <body onload="init()">
     <h1>matplot: pcolor on non-rectangular grid</h1>
-    <p>2D pseudo color plot on non-rectangular grid</p>
+    <p>2D pseudo color plot on non-rectangular grid (function pcolor)</p>
     <div id="plot"></div>
     <h2>Code:</h2>
     <pre class=prettyprint>
