--- a/demos/demo_peaks.html
+++ b/demos/demo_peaks.html
@@ -43,7 +43,7 @@ addEventListener('load', function (event) { prettyPrint() }, false);
  </head>
     <body onload="init()">
     <h1>matplot: pcolor</h1>
-    <p>2D pseudo color plot</p>
+    <p>2D pseudo color plot (function pcolor)</p>
     <div id="plot"></div>
     <h2>Code:</h2>
     <pre class=prettyprint>
