--- a/demos/demo_plot.html
+++ b/demos/demo_plot.html
@@ -5,7 +5,7 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    <meta name="author" content="Alexander Barth">
 
-   <title>matplot: Plot</title>
+   <title>matplot: 1D plot</title>
    <link href="style.css" rel="stylesheet" type="text/css" />
    <link href="prettify/prettify.css" type="text/css" rel="stylesheet" />
    <script type="text/javascript" src="prettify/prettify.js"></script>
@@ -34,7 +34,7 @@ ax = fig.axes();
 ax.plot(z,{color: 'red', label: 'foo'});
       
 // define marker and marker size
-ax.plot(y,{color: 'blue', marker: 'o', markersize: 5, label: 'bar'});
+ax.plot(y,{color: 'blue', marker: 'o', markerSize: 5, label: 'bar'});
  
 // make a dotted line with linespec
 ax.plot(x,y,{color: 'green', marker: 's', linewidth: 2, label: 'baz'});
@@ -55,8 +55,8 @@ addEventListener('load', function (event) { prettyPrint() }, false);
     </script>
  </head>
     <body onload="init()">
-    <h1>matplot: Plot</h1>
-    <p>Simple 1D line plots with different markers, anotation and legend</p>
+    <h1>matplot: 1D plot</h1>
+    <p>Simple 1D line plots with different markers, anotation and legend (function plot)</p>
     <div id="plot"></div>
     <h2>Code:</h2>
     <pre class=prettyprint>
@@ -78,7 +78,7 @@ ax = fig.axes();
 ax.plot(z,{color: 'red', label: 'foo'});
       
 // define marker and marker size
-ax.plot(y,{color: 'blue', marker: 'o', markersize: 5, label: 'bar'});
+ax.plot(y,{color: 'blue', marker: 'o', markerSize: 5, label: 'bar'});
  
 // make a dotted line with linespec
 ax.plot(x,y,{color: 'green', marker: 's', linewidth: 2, label: 'baz'});
