--- a/demos/demo_surf.html
+++ b/demos/demo_surf.html
@@ -5,7 +5,7 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    <meta name="author" content="Alexander Barth">
 
-   <title>matplot: surface plot</title>
+   <title>matplot: Surface plot</title>
    <link href="style.css" rel="stylesheet" type="text/css" />
    <link href="prettify/prettify.css" type="text/css" rel="stylesheet" />
    <script type="text/javascript" src="prettify/prettify.js"></script>
@@ -44,8 +44,8 @@ addEventListener('load', function (event) { prettyPrint() }, false);
     </script>
  </head>
     <body onload="init()">
-    <h1>matplot: surface plot</h1>
-    <p>3D pseudo color plot</p>
+    <h1>matplot: Surface plot</h1>
+    <p>3D pseudo color plot (function surf)</p>
     <div id="plot"></div>
     <h2>Code:</h2>
     <pre class=prettyprint>
