--- a/demos/demo_plot.html
+++ b/demos/demo_plot.html
@@ -63,7 +63,7 @@ addEventListener('load', function (event) { prettyPrint() }, false);
 
  var i,x=[],y=[],z=[];
 
- for (i=0; i < 49; i++) {
+ for (i=0; i &lt; 49; i++) {
    x[i] = i+3;
    y[i] = Math.sin(i/5);
    z[i] = Math.sin((i+3)/5);
