--- a/demos/demo_pcolor_canvas.html
+++ b/demos/demo_pcolor_canvas.html
@@ -58,12 +58,12 @@ addEventListener('load', function (event) { prettyPrint() }, false);
 var i,j,x=[],y=[],z=[], r, theta;
 
 // generate some data to plot
-for (i=0; i < 100; i++) {
+for (i=0; i &lt; 100; i++) {
   x[i] = [];
   y[i] = [];
   z[i] = [];
 
-  for (j=0; j < 100; j++) {
+  for (j=0; j &lt; 100; j++) {
     r = 20 + i;
     theta = 2*Math.PI * j/99;
     x[i][j] = r*Math.cos(theta);
