--- a/demos/demo_quiver_canvas.html
+++ b/demos/demo_quiver_canvas.html
@@ -59,13 +59,13 @@ addEventListener('load', function (event) { prettyPrint() }, false);
 var i,j,x=[],y=[],u=[], v=[];
   
 // generate some data to plot
-for (i=0; i < 30; i++) {
+for (i=0; i &lt; 30; i++) {
   x[i] = [];
   y[i] = [];
   u[i] = [];
   v[i] = [];
 
-  for (j=0; j < 30; j++) {
+  for (j=0; j &lt; 30; j++) {
     x[i][j] = i-15
     y[i][j] = j-15
     u[i][j] = -y[i][j]
