--- a/demos/demo_scatter3_canvas.html
+++ b/demos/demo_scatter3_canvas.html
@@ -79,19 +79,19 @@ var i, j, k, x = [],y = [], z = [], c = [], r = [];
 
 
 // generate some data to plot
-for (i=0; i < 4; i++) {
+for (i=0; i &lt; 4; i++) {
   x[i] = [];
   y[i] = [];
   z[i] = [];
   c[i] = [];
 
-  for (j=0; j < 20; j++) {
+  for (j=0; j &lt; 20; j++) {
     x[i][j] = [];
     y[i][j] = [];
     z[i][j] = [];
     c[i][j] = [];
                 
-    for (k=0; k < 10; k++) {
+    for (k=0; k &lt; 10; k++) {
       r = 20 + 5*i;
       phi = 2*Math.PI * j/19;
       theta = Math.PI * k/9;
