--- a/demos/demo_scatter_canvas.html
+++ b/demos/demo_scatter_canvas.html
@@ -58,7 +58,7 @@ var i,x=[],y=[],c=[];
 
 // generate some data to plot
 // generate some data to plot
-for (i=0; i < 100; i++) {
+for (i=0; i &lt; 100; i++) {
 
     r = 20 + 5*i;
     theta = 2*Math.PI * i/25;
